--- a/1-css-grid.html
+++ b/1-css-grid.html
@@ -10,6 +10,7 @@
 </head>
 
 <body>
+  <!-- .container>.content.c$*16{content$} -->
   <h1>CSS GRID</h1>
   <div class="container">
     <div class="content content1">Clarusway</div>
